--- a/TKEDM/TKEDM.csproj
+++ b/TKEDM/TKEDM.csproj
@@ -63,6 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmEMAIL.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEMAIL.Designer.cs">
+      <DependentUpon>frmEMAIL.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmEMAIL.resx">
+      <DependentUpon>frmEMAIL.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
